--- a/Chat-talk/src/App.css
+++ b/Chat-talk/src/App.css
@@ -35,6 +35,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  overflow-x: scroll;
 }
 
 .input-area {
